--- a/nginx.conf
+++ b/nginx.conf
@@ -71,7 +71,10 @@ http {
 			proxy_pass http://localhost:3000;
 			proxy_http_version 1.1;
         	proxy_set_header Upgrade $http_upgrade;
-        	proxy_set_header Connection "upgrade";
+        	proxy_set_header Connection "";
+			chunked_transfer_encoding off;
+			proxy_buffering off;
+			proxy_cache off;
 		}
 	}
 }
