--- a/nginx.conf
+++ b/nginx.conf
@@ -69,6 +69,7 @@ http {
 			proxy_pass http://localhost:3000;
 			proxy_http_version 1.1;
 			proxy_set_header Connection "";
+			chunked_transfer_encoding off;
 		}
 	}
 }
