--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^4.11.0",
     "nodemon": "^2.0.20",
     "yjs": "^13.5.42"
   }
