--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^4.11.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "yjs": "^13.5.42"
   }
