--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.5.0",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
