minor good fixes

--- a/nginx.conf
+++ b/nginx.conf
@@ -71,6 +71,10 @@ http {
 			proxy_set_header Connection "";
 			chunked_transfer_encoding off;
 		}
+
+		location /app/home {
+			proxy_pass http://localhost:5601;
+		}
 	}
 }
 
